--- a/src/app/components/sidebar/index.scss
+++ b/src/app/components/sidebar/index.scss
@@ -1,6 +1,14 @@
+.selectedItem {
+    @apply text-primary bg-black border-l-2 border-primary;
+
+    svg {
+        fill: #eb1616;
+        stroke: #eb1616;
+    }
+}
+
 .item-nav {
-    color: #6c7293;
-    transition-duration: 0.5s;
+    @apply text-light duration-500 border-l-2 border-black;
 
     svg {
         fill: #6c7293;
@@ -9,12 +17,6 @@
     }
 
     &:hover {
-        color: #eb1616;
-        background: #000;
-
-        svg {
-            fill: #eb1616;
-            stroke: #eb1616;
-        }
+        @extend .selectedItem;
     }
 }
