--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  @apply text-primary;
+  @apply text-light;
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
