--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,24 @@
     --foreground: #ededed;
   }
 }
+* {
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+    border-radius: 8px;
+  }
 
+  &::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+    border-radius: 8px;
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #c2c2c2;
+  }
+}
 body {
   @apply text-light;
   background: var(--background);
